update back end dokumentasi dan pergantian route api
